# opentelemetry-c

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  lttng-otelcpp.Dockerfile  opentelemetry-c.pc.in  protobuf_libraries_as_private_dependencies.patch  run-basic-example.sh  run-client-server-socket-example.sh  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  README.md  main.c
examples/basic-log/: CMakeLists.txt  main.c
examples/client-server-socket/: CMakeLists.txt  README.md  client.c  context.c  context.h  server.c  zhelpers.h
examples/observable-up-down-counter/: CMakeLists.txt  README.md  main.c
examples/up-down-counter/: CMakeLists.txt  README.md  main.c
include/: opentelemetry-c.h  opentelemetry_c.h
include/opentelemetry_c/: opentelemetry_c.h
include/opentelemetry_c/utils/: lttng_logs_exporter.h  lttng_metrics_exporter.h  lttng_opentelemetry_exporter_tracepoints.h  lttng_spans_exporter.h  map.h  socket_carrier.h
include/utils/: lttng_metrics_exporter.h  lttng_opentelemetry_exporter_tracepoints.h  lttng_span_exporter.h  lttng_span_exporter_lttng_tracepoint.h  map.h  socket_carrier.h
src/: opentelemetry-c.cpp  opentelemetry_c.cpp
src/utils/: lttng_logs_exporter.cpp  lttng_metrics_exporter.cpp  lttng_opentelemetry_exporter_tracepoints.cpp  lttng_span_exporter.cpp  lttng_spans_exporter.cpp  map.cpp  socket_carrier.cpp
